new build from mac os. this time with larger starting memory and new unity lts version.

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/dna_2023.loader.js";
+      var loaderUrl = buildUrl + "/dna.loader.js";
       var config = {
-        dataUrl: buildUrl + "/dna_2023.data",
-        frameworkUrl: buildUrl + "/dna_2023.framework.js",
-        codeUrl: buildUrl + "/dna_2023.wasm",
+        dataUrl: buildUrl + "/dna.data",
+        frameworkUrl: buildUrl + "/dna.framework.js",
+        codeUrl: buildUrl + "/dna.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MartyB",
         productName: "DNA-Unity",
