--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Unity WebGL Player | DNA-Unity</title>
+    <title>Unity WebGL Player | DNA</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -24,20 +24,20 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">DNA-Unity</div>
+        <div id="unity-build-title">DNA</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/dna_2023.loader.js";
+      var loaderUrl = buildUrl + "/DNA.loader.js";
       var config = {
-        dataUrl: buildUrl + "/dna_2023.data",
-        frameworkUrl: buildUrl + "/dna_2023.framework.js",
-        codeUrl: buildUrl + "/dna_2023.wasm",
+        dataUrl: buildUrl + "/DNA.data",
+        frameworkUrl: buildUrl + "/DNA.framework.js",
+        codeUrl: buildUrl + "/DNA.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MartyB",
-        productName: "DNA-Unity",
-        productVersion: "0.1.1",
+        productName: "DNA",
+        productVersion: "1.0.0.12",
       };
 
       var container = document.querySelector("#unity-container");
